<resources>
    <string name="app_name"><b>ConnecTue</b></string>
    <string name="LoginBtnStr"><b>Login</b></string>
    <string name="RegisterBtnStr"><b>Register</b></string>
    <string name="channels"><b>Channels</b></string>
    <string name="RegisterTextAccQuery">Don\'t have an account?</string>
    <string name="LoginInfo">Welcome back! Enter your credentials to access your account.</string>
    <string name="RegInfo">Hey there! Enter the following details to enjoy the app.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string-array name="programs_array">
        <item> </item>
        <item>BAM</item>
        <item>BAP</item>
        <item>AUBS</item>
        <item>BAT</item>
        <item>BBE</item>
        <item>BCEC</item>
        <item>BCSE</item>
        <item>BDS</item>
        <item>BEE</item>
        <item>BID</item>
        <item>BIE</item>
        <item>BME</item>
        <item>BPT</item>
        <item>BSI</item>
    </string-array>
    <string name="title_activity_channels">ChannelsActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="channelstitle">Channels</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connectue"><![CDATA[<b>ConnecTue</b>]]></string>
    <string name="popular"><b>Popular</b></string>

    <string name="_2wbb0"><b>2WBB0</b></string>
    <string name="my_courses"><b>My Courses</b></string>
    <string name="majors"><b>Majors</b></string>
    <string name="follow"><b>follow</b></string>
    <string name="major_text"><b>Majors: </b></string>
    <string name="email_text"><b>Email: </b></string>
    <string name="phone_text"><b>Phone number: </b></string>
    <string name="firstName"><b>First name </b></string>
    <string name="lastName"><b>Last name</b></string>
    <string name="email_hint"><b>Email </b></string>
    <string name="phone_hint"><b>Phone number </b></string>
    <string name="profile_title"><b>Profile </b></string>
    <string name="post_history">Post History</string>
    <string name="review_history">Review History</string>
    <string name="delete_account"><b>DELETE ACCOUNT </b></string>
    <string name="Edit_button"><b>Edit </b></string>
    <string name="Log_out"><b>Logout </b></string>
    <string name="report">Report</string>
    <string name="home"><b>Home</b></string>

</resources>