<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/background"
    tools:context=".activities.LoginActivity"
    android:padding="30dp">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTILL"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/emailETL"

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/passwordTIL"
        android:layout_below="@+id/emailTILL">
        <EditText
            android:id="@+id/passwordETL"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/buttonlgn"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="200dp"
        android:textColor="@android:color/background_light"
        android:text="@string/LoginBtnStr"/>
    <Button
        android:id="@+id/buttonregister"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:textColor="@android:color/background_light"
        android:text="@string/RegisterBtnStr"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textAlignment="center"
        style="@style/textColor"
        android:layout_marginBottom="100dp"
        android:text="@string/RegisterTextAccQuery" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/LoginBtnStr"
        style="@style/textColor"
        android:textSize="32sp"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/LoginInfo"
        android:textSize="15sp"
        style="@style/textColor"
        android:layout_marginTop="70dp" />


</RelativeLayout>