<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity"
    style="@style/background"
    android:padding="30dp">

    <Button
        android:id="@+id/buttonregister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/passwordTIL"
        android:layout_marginBottom="40dp"
        style="@style/buttonStyle"
        android:text="@string/RegisterBtnStr"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/FirstNameTIL"
        android:layout_above="@+id/LastNameTIL">
        <EditText
            android:id="@+id/FirstNameET"
            android:inputType="text"
            android:hint="@string/first_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/LastNameTIL"
        android:layout_above="@+id/emailTIL">
        <EditText
            android:id="@+id/LastNameET"
            android:inputType="text"
            android:hint="@string/last_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Program"
        android:layout_above="@id/ProgramSpinner" />
    <Spinner
        android:id="@+id/ProgramSpinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAlignment="textStart"
        android:layout_above="@id/FirstNameTIL"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTIL"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/passwordTIL"
        android:layout_below="@+id/emailTIL">
        <EditText
            android:id="@+id/passwordET"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        style="@style/textColor"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/RegisterBtnStr"
        android:textSize="32sp"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textColor"
        android:layout_alignParentTop="true"
        android:text="@string/RegInfo"
        android:textSize="15sp"
        android:layout_marginTop="70dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/baseline_arrow_back_ios_new_24"
        android:layout_alignParentBottom="true"
        style="@style/buttonStyle"
        app:tint="@color/Design2"
        />
</RelativeLayout>